--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.6.4'
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
         classpath "com.vanniktech:gradle-code-quality-tools-plugin:0.19.0"
+        classpath "no.tornado:fxlauncher-gradle-plugin:1.0.18"
     }
 }
 
@@ -26,7 +27,7 @@ allprojects {
 apply plugin: "com.vanniktech.code.quality.tools"
 codeQualityTools {
 
-    ignoreProjects = ["demoandroid"]
+    ignoreProjects = ["demo-android", "demo-desktop"]
 
     detekt.config = rootProject.file("quality/detekt.yml").path
     detekt.toolVersion = '1.5.0'
